test/conformance/chainsaw/generate/clusterpolicy/standard/clone/sync/cpol-clone-list-sync-delete-source/chainsaw-step-01-apply-1-3.yaml
apiVersion: v1
data:
  foo: YmFy
kind: Secret
metadata:
  labels:
    allowedToBeCloned: "true"
    location: europe
  name: mysecret-2
  namespace: cpol-clone-list-sync-delete-source-existing-ns
type: Opaque
