test/conformance/chainsaw/generate/clusterpolicy/standard/clone/sync/cpol-clone-list-sync-delete-source/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: cpol-clone-list-sync-delete-source-cpol
spec:
  rules:
  - generate:
      cloneList:
        kinds:
        - v1/Secret
        namespace: cpol-clone-list-sync-delete-source-existing-ns
        selector:
          matchLabels:
            allowedToBeCloned: "true"
      namespace: '{{ request.object.metadata.name }}'
      synchronize: true
    match:
      all:
      - resources:
          kinds:
          - Namespace
    name: sync-secret
