test/conformance/chainsaw/generate/clusterpolicy/standard/clone/sync/cpol-clone-list-sync-delete-source/target-1.yaml
apiVersion: v1
data:
  foo: YmFy
kind: Secret
metadata:
  labels:
    allowedToBeCloned: "true"
    location: europe
  name: mysecret-1
  namespace: cpol-clone-list-sync-delete-source-trigger-ns-1
type: Opaque
