test/conformance/chainsaw/generate/clusterpolicy/standard/clone/sync/cpol-clone-list-sync-delete-source/triggers.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: cpol-clone-list-sync-delete-source-trigger-ns-1
---
apiVersion: v1
kind: Namespace
metadata:
  name: cpol-clone-list-sync-delete-source-trigger-ns-2
