test/conformance/chainsaw/generate/clusterpolicy/standard/clone/sync/cpol-clone-list-sync-delete-source/chainsaw-step-01-assert-1-1.yaml
apiVersion: kyverno.io/v2beta1
kind: ClusterPolicy
metadata:
  name: cpol-clone-list-sync-delete-source-cpol
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
